# blog_made_in_rust

./: Cargo.toml  README.md
public/: sorry.txt
public/style/: general.css  post.css  template.css
sql/: database.db
src/: main.rs
src/blog/: controllers.rs  data.rs  database.rs  mod.rs  router.rs  routes.rs  types.rs
src/public/style/: general.css  post.css
src/sql/: database.db  init.sql
src/view/: post.html
templates/: post.html  templatePublication.html
